@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!DOCTYPE wcheaders SYSTEM "wcheaders.dtd">
+<wcheaders
+ version="0.1"
+ refresh="4"
+ scrolling="auto"
+>
+</wcheaders>
