@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <!DOCTYPE webcleaner SYSTEM "webcleaner.dtd">
-<!-- look in webcleaner.dtd for help on these options -->
 <webcleaner
- version="0.8"
+ version="0.9"
  port="9090"
  parentproxyport="8000"
  timeout="30"
  obfuscateip="0"
  debuglevel="0"
+ showerrors="1"
  noproxyfor="localhost,127.0.0.1"
 >
 <filter name="Rewriter"/>
